--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/node": "^16.11.12",
     "eslint-config-standard-with-typescript": "^21.0.1",
     "git-commit-msg-linter": "^3.2.8",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.1.2",
     "typescript": "^4.5.4"
   }
 }
