--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "husky": "^7.0.4",
     "jest": "^27.4.5",
     "lint-staged": "^12.1.2",
+    "prettier-eslint": "^13.0.0",
     "ts-jest": "^27.1.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
