test: ensure signup controller returns an error if no email is provided

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
     "object-curly-spacing": ["error", "never"],
     "semi": "off",
     "@typescript-eslint/semi": ["error", "always"],
-    "@typescript-eslint/camelcase": "off"
+    "@typescript-eslint/camelcase": "off",
+    "@typescript-eslint/strict-boolean-expressions": "off"
   }
 }
