refactor: ensure signupcontroller.handle implements correct interfaces

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
     "semi": "off",
     "@typescript-eslint/semi": ["error", "always"],
     "@typescript-eslint/camelcase": "off",
-    "@typescript-eslint/strict-boolean-expressions": "off"
+    "@typescript-eslint/strict-boolean-expressions": "off",
+    "@typescript-eslint/no-unused-vars": "off"
   }
 }
