--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --passWithNoTests --watch",
+    "test": "jest --passWithNoTests",
+    "test:unit": "npm test -- --watch",
     "test:staged": "jest --passWithNoTests"
   },
   "keywords": [],
