--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.12",
     "@types/validator": "^13.7.0",
@@ -35,6 +36,7 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "validator": "^13.7.0"
   }
 }
