chore: remove protocols from test coverage

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test:unit": "npm test -- --watch -c jest-unit-config.ts",
     "test:integration": "npm test -- --watch -c jest-integration-config.ts",
     "test:staged": "npm test -- --findRelatedTests",
-    "test:ci": "npm test -- --collectCoverage=true"
+    "test:ci": "npm test -- --collectCoverage=true --no-cache"
   },
   "keywords": [],
   "author": "",
