--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@shelf/jest-mongodb": "^2.1.1",
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^27.0.3",
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^16.11.12",
     "@types/validator": "^13.7.0",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
@@ -37,6 +39,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "mongodb": "^4.2.2",
     "validator": "^13.7.0"
   }
 }
