--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/jest": "^27.0.3",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^16.11.12",
+    "@types/supertest": "^2.0.11",
     "@types/validator": "^13.7.0",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
@@ -36,6 +37,7 @@
     "lint-staged": "^12.1.2",
     "prettier-eslint": "^13.0.0",
     "sucrase": "^3.20.3",
+    "supertest": "^6.1.6",
     "ts-jest": "^27.1.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
